// Bun Snapshot v1, https://bun.sh/docs/test/snapshots
// W31: 9 complete bodies reviewed in W31e-bun-alignment.json.

exports[`Checkbox should render basic checkbox 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OLcursor-vpointer" for="_r_0_">
      <input id="_r_0_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1 OHcgtszcnhc0bd7fz0 OHdv18mw1v3grs831i   OHb02evum8m18c_20r  OHc26g0f9lkfx77b_0 OHasggce1ee8uut3ku OHbn3vk_8bv59jbjl4 " type="checkbox">
    </label>
    <label class="OLcursor-vpointer" for="_r_0_">
      <span class="OLfont_dsize-v14px OHb567104ye6nyylh_ OHcy01leldswjncurr">
        Test Checkbox
      </span>
    </label>
  </div>
</div>"
`;

exports[`Checkbox should render checked checkbox 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OLcursor-vpointer" for="_r_1_">
      <input id="_r_1_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1 OHcgtszcnhc0bd7fz0 OHdv18mw1v3grs831i   OHb02evum8m18c_20r  OHc26g0f9lkfx77b_0 OHasggce1ee8uut3ku OHbn3vk_8bv59jbjl4 " type="checkbox" checked="">
      <svg height="10" viewBox="0 0 12 10" width="12" xmlns="http://www.w3.org/2000/svg" class="OLopacity-v1 OHc7yxqel1ec635ch_ OLz_dindex-v1">
        <path clip-rule="evenodd" d="M11.6474 0.807113C12.0992 1.23373 12.1195 1.94575 11.6929 2.39745L5.31789 9.14745C5.10214 9.37589 4.80069 9.50369 4.48649 9.49992C4.1723 9.49615 3.874 9.36114 3.6638 9.12759L0.288803 5.37759C-0.126837 4.91576 -0.0893993 4.20444 0.372424 3.7888C0.834247 3.37315 1.54557 3.41059 1.96121 3.87242L4.51994 6.71544L10.0571 0.852551C10.4837 0.400843 11.1957 0.3805 11.6474 0.807113Z" fill="var(--checkIcon, #FFF)" fill-rule="evenodd">
        </path>
      </svg>
    </label>
    <label class="OLcursor-vpointer" for="_r_1_">
      <span class="OLfont_dsize-v14px OHb567104ye6nyylh_ OHcy01leldswjncurr">
        Test Checkbox
      </span>
    </label>
  </div>
</div>"
`;

exports[`Checkbox should render disabled checkbox 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OHa35n88ll8zyw1o36" for="_r_2_">
      <input disabled="" id="_r_2_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1  OHdv18mw1v3grs831i      OHbxk2p7ke6q3x3qre " type="checkbox">
    </label>
    <label class="OHa35n88ll8zyw1o36" for="_r_2_">
      <span class="OLfont_dsize-v14px OHb567104ye6nyylh_ OHdix07edydnm_za7m">
        Test Checkbox
      </span>
    </label>
  </div>
</div>"
`;

exports[`Checkbox should render disabled and checked checkbox 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OHa35n88ll8zyw1o36" for="_r_3_">
      <input disabled="" id="_r_3_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1  OHdv18mw1v3grs831i      OHbxk2p7ke6q3x3qre " type="checkbox" checked="">
      <svg height="10" viewBox="0 0 12 10" width="12" xmlns="http://www.w3.org/2000/svg" class="OLopacity-v1 OHc7yxqel1ec635ch_ OLz_dindex-v1">
        <path clip-rule="evenodd" d="M11.6474 0.807113C12.0992 1.23373 12.1195 1.94575 11.6929 2.39745L5.31789 9.14745C5.10214 9.37589 4.80069 9.50369 4.48649 9.49992C4.1723 9.49615 3.874 9.36114 3.6638 9.12759L0.288803 5.37759C-0.126837 4.91576 -0.0893993 4.20444 0.372424 3.7888C0.834247 3.37315 1.54557 3.41059 1.96121 3.87242L4.51994 6.71544L10.0571 0.852551C10.4837 0.400843 11.1957 0.3805 11.6474 0.807113Z" fill="light-dark(#D6D7DE, #47474A)" fill-rule="evenodd">
        </path>
      </svg>
    </label>
    <label class="OHa35n88ll8zyw1o36" for="_r_3_">
      <span class="OLfont_dsize-v14px OHb567104ye6nyylh_ OHdix07edydnm_za7m">
        Test Checkbox
      </span>
    </label>
  </div>
</div>"
`;

exports[`Checkbox should render checkbox with custom child 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OLcursor-vpointer" for="_r_4_">
      <input id="_r_4_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1 OHcgtszcnhc0bd7fz0 OHdv18mw1v3grs831i   OHb02evum8m18c_20r  OHc26g0f9lkfx77b_0 OHasggce1ee8uut3ku OHbn3vk_8bv59jbjl4 " type="checkbox">
    </label>
    <label class="OLcursor-vpointer" for="_r_4_">
      <div>
        Custom Child
      </div>
    </label>
  </div>
</div>"
`;

exports[`Checkbox should render with custom colors 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OLcursor-vpointer" for="_r_h_">
      <input id="_r_h_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1 OHcgtszcnhc0bd7fz0 OHdv18mw1v3grs831i   OHb02evum8m18c_20r  OHc26g0f9lkfx77b_0 OHasggce1ee8uut3ku OHbn3vk_8bv59jbjl4 " style="--primary: #ff0000; --border: #00ff00; --inputBg: #ffff00;" type="checkbox">
    </label>
    <label class="OLcursor-vpointer" for="_r_h_">
      <span class="OLfont_dsize-v14px OHb567104ye6nyylh_ OHcy01leldswjncurr" style="--text: #0000ff;">
        Test Checkbox
      </span>
    </label>
  </div>
</div>"
`;

exports[`Checkbox should render with partial custom colors 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OLcursor-vpointer" for="_r_i_">
      <input id="_r_i_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1 OHcgtszcnhc0bd7fz0 OHdv18mw1v3grs831i   OHb02evum8m18c_20r  OHc26g0f9lkfx77b_0 OHasggce1ee8uut3ku OHbn3vk_8bv59jbjl4 " style="--primary: #ff0000;" type="checkbox">
    </label>
    <label class="OLcursor-vpointer" for="_r_i_">
      <span class="OLfont_dsize-v14px OHb567104ye6nyylh_ OHcy01leldswjncurr" style="--text: #0000ff;">
        Test Checkbox
      </span>
    </label>
  </div>
</div>"
`;

exports[`Checkbox should render checked checkbox with custom colors 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OLcursor-vpointer" for="_r_j_">
      <input id="_r_j_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1 OHcgtszcnhc0bd7fz0 OHdv18mw1v3grs831i   OHb02evum8m18c_20r  OHc26g0f9lkfx77b_0 OHasggce1ee8uut3ku OHbn3vk_8bv59jbjl4 " style="--primary: #ff0000; --border: #00ff00; --inputBg: #ffff00;" type="checkbox" checked="">
      <svg height="10" viewBox="0 0 12 10" width="12" xmlns="http://www.w3.org/2000/svg" class="OLopacity-v1 OHc7yxqel1ec635ch_ OLz_dindex-v1" style="--checkIcon: #000000;">
        <path clip-rule="evenodd" d="M11.6474 0.807113C12.0992 1.23373 12.1195 1.94575 11.6929 2.39745L5.31789 9.14745C5.10214 9.37589 4.80069 9.50369 4.48649 9.49992C4.1723 9.49615 3.874 9.36114 3.6638 9.12759L0.288803 5.37759C-0.126837 4.91576 -0.0893993 4.20444 0.372424 3.7888C0.834247 3.37315 1.54557 3.41059 1.96121 3.87242L4.51994 6.71544L10.0571 0.852551C10.4837 0.400843 11.1957 0.3805 11.6474 0.807113Z" fill="var(--checkIcon, #FFF)" fill-rule="evenodd">
        </path>
      </svg>
    </label>
    <label class="OLcursor-vpointer" for="_r_j_">
      <span class="OLfont_dsize-v14px OHb567104ye6nyylh_ OHcy01leldswjncurr" style="--text: #0000ff;">
        Test Checkbox
      </span>
    </label>
  </div>
</div>"
`;

exports[`Checkbox should render disabled checkbox with custom colors 1`] = `
"<div>
  <div class="OLdisplay-vflex-o0 OHcv8oijaub8u8k_sq OLgap-v8px">
    <label class="OHa8_8n2alwf3oubm2 OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08 OLwidth-v16px OLheight-v16px OHa35n88ll8zyw1o36" for="_r_k_">
      <input disabled="" id="_r_k_" class="OHcz2md7wt9p6ux_z8 OHalh1huzla_lr98ni OHco_mr8y7obje0dr9 OHdv3at8iizwni1ejr OHdqxr3r3a571rumus OHactu1tv7h3hlcmj7 OHcmphkxokqsytctnf OHbpkcv6gj3c86meki OHc1wp2xmmyk_0mlqj OLheight-v100_c-o1 OLleft-v0-o1 OLmargin-v0-o1 OLopacity-v1-o1 OHdlsawpwyswtm0tzv OHao8yiohppbc31eya OLtop-v0-o1 OLwidth-v100_c-o1 OLz_dindex-v0-o1  OHdv18mw1v3grs831i      OHbxk2p7ke6q3x3qre " style="--primary: #ff0000; --border: #00ff00; --inputBg: #ffff00;" type="checkbox">
    </label>
    <label class="OHa35n88ll8zyw1o36" for="_r_k_">
      <span class="OLfont_dsize-v14px OHb567104ye6nyylh_ OHdix07edydnm_za7m" style="--text: #0000ff;">
        Test Checkbox
      </span>
    </label>
  </div>
</div>"
`;
